// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers invoiceReducer should handle ADD_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "addInvoiceError": null,
    "cancelInvoiceError": null,
    "invoices": Array [],
    "isInvoiceCancelling": false,
-   "isInvoiceCreating": false,
+   "isInvoiceCreating": true,
    "isInvoiceSettling": false,
    "settleInvoiceError": null,
  }
`;

exports[`reducers invoiceReducer should handle ADD_INVOICE_FAILURE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "addInvoiceError": null,
+   "addInvoiceError": "some error",
    "cancelInvoiceError": null,
    "invoices": Array [],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
    "isInvoiceSettling": false,
    "settleInvoiceError": null,
  }
`;

exports[`reducers invoiceReducer should handle ADD_INVOICE_SUCCESS 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers invoiceReducer should handle RECEIVE_INVOICES 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "addInvoiceError": null,
    "cancelInvoiceError": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "addIndex": 1,
+       "rHash": "123",
+     },
+     Object {
+       "addIndex": 2,
+       "rHash": "456",
+     },
+   ],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
    "isInvoiceSettling": false,
    "settleInvoiceError": null,
  }
`;

exports[`reducers invoiceReducer should handle UPDATE_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "addInvoiceError": null,
    "cancelInvoiceError": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "rHash": "123",
+     },
+   ],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
    "isInvoiceSettling": false,
    "settleInvoiceError": null,
  }
`;

exports[`reducers invoiceReducer should handle initial state 1`] = `
Object {
  "addInvoiceError": null,
  "cancelInvoiceError": null,
  "invoices": Array [],
  "isInvoiceCancelling": false,
  "isInvoiceCreating": false,
  "isInvoiceSettling": false,
  "settleInvoiceError": null,
}
`;
